syntax = 'proto3';

package order.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/materials-resources/s_prophet/internal/core/model/order_v1alpha0";

message Address {
  double id = 1;
  string name = 2;
  string line_one = 3;
  string line_two = 4;
  string city = 5;
  string state = 6;
  string postal_code = 7;
  string country = 8;
}
message Customer {
  double id = 1;
  string name = 2;
  string phone_number = 3;
  string email = 4;
}

message CustomerContact {
  string id = 1;
  string name = 3;
  string phone_number = 4;
  string email = 5;
  string title = 6;
}

message OrderItem {
  int32 product_uid = 1;
  double quantity_ordered = 2;
  google.protobuf.Timestamp required_date = 3;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);

  rpc CreateQuote(CreateQuoteRequest) returns (CreateQuoteResponse);

  rpc GetPickTicketById(GetPickTicketByIdRequest) returns (GetPickTicketByIdResponse);
}

message CreateOrderRequest {}
message CreateOrderResponse {}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  message OrderItem {
    string id = 1;
    string sn = 2;
    string name = 3;
    double quantity_ordered = 4;
    string quantity_unit = 5;
    double cost_per_unit = 6;
    double total_price = 7;
    int32 product_uid = 8;
  }

  string id = 1;
  repeated OrderItem order_items = 2;
  string status = 3;

  Address shipping_address = 4;
  Customer customer = 5;
  CustomerContact contact = 6;

  string delivery_instructions = 10;
  string taker = 12;
  string purchase_order = 13;
}

message CreateQuoteRequest {
  message OrderItem {
    int32 product_uid = 1;
    double quantity_ordered = 2;
    google.protobuf.Timestamp required_date = 3;
  }
  repeated OrderItem order_items = 1;
  double customer_id = 2;
  double shipping_address_id = 3;
  string contact_id = 4;

}
message CreateQuoteResponse {}

message GetPickTicketByIdRequest {
  double id = 1;
}
message GetPickTicketByIdResponse {
  double id = 1;
  string order_id = 2;
  string order_purchase_order = 3;
  CustomerContact order_contact = 4;
  Address shipping_address = 5;
  string delivery_instructions = 6;
}
