syntax = 'proto3';

package shipping.v1alpha0;

option go_package = "github.com/materials-resources/s_prophet/internal/core/model/warehouse_v1alpha0";

service ShippingService {
  rpc GetPickTicket(GetPickTicketRequest) returns (GetPickTicketResponse);
}

message GetPickTicketRequest{
  string id = 1;
}

message GetPickTicketResponse{
  message ShippingDetails {
    string name = 3;
    string line_one = 4;
    string line_two = 5;
    string city = 6;
    string state = 7;
    string postal_code = 8;
    string country = 9;
    string delivery_instructions = 10;
  }
  string pick_ticket_id = 1;
  ShippingDetails shipping_details = 3;
  string order_id = 8;
  string order_purchase_order = 9;
  string order_contact_name = 11;
}